# SFML3-Widget-Tests

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
examples/imgui/inc/Logging/: BasicLogController.hpp
examples/imgui/src/: CMakeLists.txt  main.cpp
examples/qt/src/: CMakeLists.txt  main.cpp
examples/wxwidgets/: app.manifest
examples/wxwidgets/inc/: app.hpp
examples/wxwidgets/inc/Logging/: BasicLogController.hpp
examples/wxwidgets/src/: CMakeLists.txt  main.cpp
scripts/: build.sh  settings.json.template
